--- a/Solution/Rib.Common.Tests/packages.config
+++ b/Solution/Rib.Common.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net46" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net46" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net46" />
 </packages>
