--- a/Solution/Rib.Common.Models.Tests/Rib.Common.Models.Tests.csproj
+++ b/Solution/Rib.Common.Models.Tests/Rib.Common.Models.Tests.csproj
@@ -76,6 +76,8 @@
     <Compile Include="Helpers\CorrelationIdExtensionsTests.cs" />
     <Compile Include="Helpers\CorrelationIdTests.cs" />
     <Compile Include="Metadata\BindFromAttributeTests.cs" />
+    <Compile Include="Metadata\ClientEnumAttributeTests.cs" />
+    <Compile Include="Metadata\ContextPropertyAttributeTests.cs" />
     <Compile Include="Metadata\EnumModelTests.cs" />
     <Compile Include="NullArgumentTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
